// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsBody/> should render ResultsBody and match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultsBody
    assets={
      Array [
        Object {
          "title": "Asset 1",
        },
        Object {
          "title": "Asset 2",
        },
        Object {
          "title": "Asset 3",
        },
        Object {
          "title": "Asset 4",
        },
        Object {
          "title": "Asset 5",
        },
        Object {
          "title": "Asset 6",
        },
        Object {
          "title": "Asset 7",
        },
        Object {
          "title": "Asset 8",
        },
        Object {
          "title": "Asset 9",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="results-body"
      >
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 1"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 2"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 3"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 4"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 5"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 6"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 7"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 8"
          year={1992}
        />
        <FilmItem
          genre="horror"
          posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
          title="Asset 9"
          year={1992}
        />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 1"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 2"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 3"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 4"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 5"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 6"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 7"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 8"
            year={1992}
          />,
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 9"
            year={1992}
          />,
        ],
        "className": "results-body",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Asset 1",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 1",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 2",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 2",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 3",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 3",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 4",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 4",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 5",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 5",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 6",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 6",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 7",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 7",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 8",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 8",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Asset 9",
          "nodeType": "function",
          "props": Object {
            "genre": "horror",
            "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
            "title": "Asset 9",
            "year": 1992,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="results-body"
        >
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 1"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 2"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 3"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 4"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 5"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 6"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 7"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 8"
            year={1992}
          />
          <FilmItem
            genre="horror"
            posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
            title="Asset 9"
            year={1992}
          />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 1"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 2"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 3"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 4"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 5"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 6"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 7"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 8"
              year={1992}
            />,
            <FilmItem
              genre="horror"
              posterUrl="http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg"
              title="Asset 9"
              year={1992}
            />,
          ],
          "className": "results-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Asset 1",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 1",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 2",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 2",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 3",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 3",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 4",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 4",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 5",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 5",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 6",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 6",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 7",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 7",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 8",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 8",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Asset 9",
            "nodeType": "function",
            "props": Object {
              "genre": "horror",
              "posterUrl": "http://bipbap.ru/wp-content/uploads/2017/05/VOLKI-krasivye-i-ochen-umnye-zhivotnye.jpg",
              "title": "Asset 9",
              "year": 1992,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ResultsBody/> should render ResultsBody and match snapshot 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultsBody
    assets={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="results-body"
      >
        <EmptyResults />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <EmptyResults />,
        "className": "results-body",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="results-body"
        >
          <EmptyResults />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <EmptyResults />,
          "className": "results-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
